refactor legacy gui