@@ -1,6 +1,6 @@
 package com.brandonitaly.bedrockskins.client.gui.legacy;
 
-import java.util.*;
+import java.util.List;
 
 public class PlayerSkinWidgetList {
     public final int x, y;
@@ -26,15 +26,15 @@ public class PlayerSkinWidgetList {
 
     static {
         // Mapped by (offset + 4) -> index 0 to 8
-        SLOT_CONFIGS[0] = new SlotConfig(-OFFSET * 4 + 80, VERTICAL_OFFSET + 10, 0.4f, FACING_FROM_LEFT, false); // Offset -4
-        SLOT_CONFIGS[1] = new SlotConfig(-OFFSET * 3, VERTICAL_OFFSET + 33, 0.4f, FACING_FROM_LEFT, false);      // Offset -3
-        SLOT_CONFIGS[2] = new SlotConfig(-OFFSET - 45, VERTICAL_OFFSET + 25, 0.55f, FACING_FROM_LEFT, false);    // Offset -2
-        SLOT_CONFIGS[3] = new SlotConfig(-OFFSET + 18, VERTICAL_OFFSET + 17, 0.7f, FACING_FROM_LEFT, false);     // Offset -1
-        SLOT_CONFIGS[4] = new SlotConfig(8, 20, 0.85f, 0f, true);                                                // Offset  0 (Center)
-        SLOT_CONFIGS[5] = new SlotConfig(OFFSET + 20, VERTICAL_OFFSET + 17, 0.7f, FACING_FROM_RIGHT, false);     // Offset  1
-        SLOT_CONFIGS[6] = new SlotConfig(OFFSET * 2 + 18, VERTICAL_OFFSET + 25, 0.55f, FACING_FROM_RIGHT, false);// Offset  2
-        SLOT_CONFIGS[7] = new SlotConfig(OFFSET * 3 + 35, VERTICAL_OFFSET + 33, 0.4f, FACING_FROM_RIGHT, false); // Offset  3
-        SLOT_CONFIGS[8] = new SlotConfig(OFFSET * 4, VERTICAL_OFFSET * 4 + 20, 0.4f, FACING_FROM_RIGHT, false);  // Offset  4
+        SLOT_CONFIGS[0] = new SlotConfig(-OFFSET * 4 + 80, VERTICAL_OFFSET + 10, 0.4f, FACING_FROM_LEFT, false);
+        SLOT_CONFIGS[1] = new SlotConfig(-OFFSET * 3, VERTICAL_OFFSET + 33, 0.4f, FACING_FROM_LEFT, false);
+        SLOT_CONFIGS[2] = new SlotConfig(-OFFSET - 45, VERTICAL_OFFSET + 25, 0.55f, FACING_FROM_LEFT, false);
+        SLOT_CONFIGS[3] = new SlotConfig(-OFFSET + 18, VERTICAL_OFFSET + 17, 0.7f, FACING_FROM_LEFT, false);
+        SLOT_CONFIGS[4] = new SlotConfig(8, 20, 0.85f, 0f, true); // Center
+        SLOT_CONFIGS[5] = new SlotConfig(OFFSET + 20, VERTICAL_OFFSET + 17, 0.7f, FACING_FROM_RIGHT, false);
+        SLOT_CONFIGS[6] = new SlotConfig(OFFSET * 2 + 18, VERTICAL_OFFSET + 25, 0.55f, FACING_FROM_RIGHT, false);
+        SLOT_CONFIGS[7] = new SlotConfig(OFFSET * 3 + 35, VERTICAL_OFFSET + 33, 0.4f, FACING_FROM_RIGHT, false);
+        SLOT_CONFIGS[8] = new SlotConfig(OFFSET * 4, VERTICAL_OFFSET * 4 + 20, 0.4f, FACING_FROM_RIGHT, false);
     }
 
     private record SlotConfig(int dx, int dy, float scale, float rotY, boolean interactable) {}
@@ -42,7 +42,7 @@ public class PlayerSkinWidgetList {
     private PlayerSkinWidgetList(int x, int y, PlayerSkinWidget[] widgets) {
         this.x = x;
         this.y = y;
-        this.widgets = new ArrayList<>(Arrays.asList(widgets));
+        this.widgets = List.of(widgets);
     }
 
     public static PlayerSkinWidgetList of(int x, int y, PlayerSkinWidget... widgets) {
@@ -60,26 +60,19 @@ public class PlayerSkinWidgetList {
         }
 
         int n = widgets.size();
-        
-        PlayerSkinWidget.PreviewPose currentPose = PlayerSkinWidget.PreviewPose.STANDING;
-        if (this.element3 != null) {
-            currentPose = this.element3.getPreviewPose();
-        }
+        PlayerSkinWidget.PreviewPose currentPose = (this.element3 != null) ? this.element3.getPreviewPose() : PlayerSkinWidget.PreviewPose.STANDING;
 
         int oldIndex = this.index;
-        int targetIndex = getWrappedIndex(newIndex, n);
+        this.index = Math.floorMod(newIndex, n);
         
-        int delta = targetIndex - oldIndex;
+        int delta = this.index - oldIndex;
         if (delta > n / 2) delta -= n;
         if (delta < -n / 2) delta += n;
-        
-        this.index = targetIndex;
-        this.element3 = widgets.get(this.index);
         
         boolean[] usedWidgets = new boolean[n];
         
         for (int offset : OFFSETS) {
-            int wIndex = getWrappedIndex(this.index + offset, n);
+            int wIndex = Math.floorMod(this.index + offset, n);
             
             if (usedWidgets[wIndex]) continue;
             usedWidgets[wIndex] = true;
@@ -87,12 +80,9 @@ public class PlayerSkinWidgetList {
             PlayerSkinWidget w = widgets.get(wIndex);
             
             if (offset == 0) {
-                if (delta != 0) {
-                    w.setPendingPose(currentPose);
-                    w.setPreviewPose(PlayerSkinWidget.PreviewPose.STANDING);
-                } else {
-                    w.setPreviewPose(currentPose);
-                }
+                w.setPendingPose(delta != 0 ? currentPose : null);
+                w.setPreviewPose(delta != 0 ? PlayerSkinWidget.PreviewPose.STANDING : currentPose);
+                this.element3 = w;
             } else {
                 w.resetPose();
             }
@@ -100,7 +90,6 @@ public class PlayerSkinWidgetList {
             setupSlot(w, offset, delta, forcedRotX, forcedRotY);
             
             switch (offset) {
-                case  0 -> this.element3 = w;
                 case -1 -> this.element2 = w;
                 case -2 -> this.element1 = w;
                 case -3 -> this.element0 = w;
@@ -110,7 +99,6 @@ public class PlayerSkinWidgetList {
             }
         }
 
-        // Hide and reset any widgets that weren't placed in the visible offsets
         for (int i = 0; i < n; i++) {
             if (!usedWidgets[i]) {
                 PlayerSkinWidget w = widgets.get(i);
@@ -120,42 +108,27 @@ public class PlayerSkinWidgetList {
         }
     }
 
-    private int getWrappedIndex(int i, int n) {
-        return ((i % n) + n) % n;
-    }
-
     private void setupSlot(PlayerSkinWidget w, int offset, int delta, Float forcedRotX, Float forcedRotY) {
-        // Map offset (-4 to 4) to array index (0 to 8)
         SlotConfig config = SLOT_CONFIGS[offset + 4];
-        
         w.interactable = config.interactable;
-        float rotX = 0f;
-        float rotY = config.rotY;
         
-        if (offset == 0 && forcedRotX != null && forcedRotY != null) {
-            rotX = forcedRotX;
-            rotY = forcedRotY;
-        }
+        float rotX = (offset == 0 && forcedRotX != null) ? forcedRotX : 0f;
+        float rotY = (offset == 0 && forcedRotY != null) ? forcedRotY : config.rotY;
 
         int targetPosX = this.x + config.dx;
         int targetPosY = this.y + config.dy;
-        float scale = config.scale;
-        
         int currentX = w.getX();
         
-        boolean isWrap = w.visible && (
-            (delta > 0 && targetPosX > currentX + 50) || 
-            (delta < 0 && targetPosX < currentX - 50)
-        );
+        boolean isWrap = w.visible && ((delta > 0 && targetPosX > currentX + 50) || (delta < 0 && targetPosX < currentX - 50));
+        
+        w.visible();
 
         if (isWrap) {
             int virtualTargetX = currentX + (delta > 0 ? -OFFSET : OFFSET) * Math.abs(delta);
-            w.visible();
-            w.beginInterpolation(rotX, rotY, virtualTargetX, targetPosY, scale);
+            w.beginInterpolation(rotX, rotY, virtualTargetX, targetPosY, config.scale);
             w.snapTo(targetPosX, targetPosY);
         } else {
-            w.visible();
-            w.beginInterpolation(rotX, rotY, targetPosX, targetPosY, scale);
+            w.beginInterpolation(rotX, rotY, targetPosX, targetPosY, config.scale);
         }
     }
 }
